# PokaSDK

./: LICENSE.txt  README.md  exampleGame.py  pyproject.toml  sdk.py
poka/: .python-version  README.md  pyproject.toml
poka/src/poka/: sdk.py  test_sdk.py
src/poka/: __about__.py  sdk.py
tests/: __init__.py  test_sdk.py
